bug fix1